crates/fixtures/tests/snapshots/hostile__degenerate_transform.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      80
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "singular",
    "source": "document"
  },
  "pages": [
    {
      "width": 256000,
      "height": 215040
    }
  ],
  "frames": [
    {
      "name": "singular",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 30720,
        "ty": 30720
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 184320,
        "height": 153600
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 35
          },
          "preview": "Zero scale cannot erase this room.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 184320,
            "height": 13517
          },
          "baseline": 10707,
          "width": 171669,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 35
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 174294
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 35,
            "end": 69
          },
          "preview": "Identity is the reported fallback.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 184320,
            "height": 13517
          },
          "baseline": 24224,
          "width": 161610,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 35,
                "end": 69
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 161610
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "layout.transform-unusable",
      "subject": {
        "kind": "document"
      },
      "message": "frame `singular`: transform has no usable inverse; identity is used",
      "bytes": null
    }
  ]
}
