crates/fixtures/tests/snapshots/hostile__emoji_zwj.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      127
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "page": {
    "width": 430080,
    "height": 307200,
    "margin_top": 36864,
    "margin_left": 36864,
    "column_width": 225280,
    "gutter": 18432,
    "margin_column_width": 112640,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 81
          },
          "preview": "Family 👩‍👩‍👧‍👦 and flags 🇯🇵🇫🇷, a thumb 👍🏽, a",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 221173,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 81
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 223798
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 81,
            "end": 172
          },
          "preview": "keycap 1️⃣, and a chain 🧑‍🤝‍🧑🧑‍🤝‍🧑🧑‍🤝‍🧑 with no",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 24224,
          "width": 222244,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 81,
                "end": 172
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 224869
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 172,
            "end": 179
          },
          "preview": "spaces.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 27034
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 37741,
          "width": 36360,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 172,
                "end": 179
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 36360
            }
          ]
        }
      ]
    },
    {
      "node": "110@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 8448,
        "line_height": 10560,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 7
          },
          "preview": "A note.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 112640,
            "height": 10560
          },
          "baseline": 8241,
          "width": 26592,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 7
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 8448,
              "level": 0,
              "x": 0,
              "width": 26592
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "126@1",
      "schema": "reprise.follow",
      "owner": "110@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "line",
          "status": "valid",
          "resolved": {
            "line": {
              "node": "6@1",
              "line": 0
            }
          }
        }
      ]
    }
  ],
  "diagnostics": []
}
